change date and image fields
