# db/schema.rb
@@ -17,6 +17,7 @@ ActiveRecord::Schema.define(version: 20190410194907) do
     t.integer "produce_id"
     t.string "available_at"
     t.integer "readiness"
+    t.date "planted_at"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
   end
@@ -29,6 +30,7 @@ ActiveRecord::Schema.define(version: 20190410194907) do
     t.string "contact_name"
     t.string "contact_number"
     t.string "email"
+    t.string "image"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
   end
@@ -36,6 +38,7 @@ ActiveRecord::Schema.define(version: 20190410194907) do
   create_table "produces", force: :cascade do |t|
     t.string "name"
     t.string "duration"
+    t.string "image"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
   end
